--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0",
-        "wireui/wireui": "^2.2"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel/breeze": "^2.3",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
@@ -38,7 +34,7 @@
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public",
-        "kill": "killall -9 php",
+        "shut": "killall -9 php",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
@@ -65,7 +61,7 @@
         }
     },
     "config": {
-        "process-timeout": 18000,
+        "process-timeout": 7200,
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
